--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,5 +54,7 @@ dependencies {
 
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
 
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+
 
 }
