--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         <activity android:name=".infoActivity"></activity>
         <activity
             android:name=".SplashScreen"
+            android:exported="true"
             android:theme="@style/Theme.WeatherApp.splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
